--- a/app/src/main/assets/legume_help.html
+++ b/app/src/main/assets/legume_help.html
@@ -1,10 +1,13 @@
 <html>
 
 <head>
-
+    <h1 style="margin: 20px" align = "center">Information</h1>
 </head>
 
-<body style="background-color:#EEEEEE">
+
+<body style="background-color:#7fbf7f">
+
+
 
 <!--<p align="center" style="font-size:16pt"><b>How to use the Silage Moisture Cost Adjuster</b></p>-->
 
