--- a/app/src/main/assets/legume_help.html
+++ b/app/src/main/assets/legume_help.html
@@ -19,7 +19,11 @@
 
 </ul>
 
-<p align="center"><img src="ncipm.png"/></p>
+<p align="center"><img src="NPK_icon.png"/></p>
+
+<p align="center">
+    Version 1.0
+</p>
 
 <p align="center">
     This app was developed by the UW-Madison Nutrient and Pest Management (NPM) program. We would like to acknowledge the following individuals who helped on this project:
