fix email problem

--- a/app/src/main/assets/legume_help.html
+++ b/app/src/main/assets/legume_help.html
@@ -1,23 +1,50 @@
 <html>
 
 <head>
-    <h1 style="margin: 20px" align = "center">Information</h1>
+    <h1 style="margin: 5px" align = "center">Manure & Legume Nutrient Credit Calculator</h1>
 </head>
 
 
-<body style="background-color:#7fbf7f">
+<body style="background-color:#C8FFCA">
 
 
 
 <!--<p align="center" style="font-size:16pt"><b>How to use the Silage Moisture Cost Adjuster</b></p>-->
 
-<ul>
-    <li style="margin-bottom:10px">This app calculates credit legume Nitrogen.</li>
-    <li style="margin-bottom:10px">Simply pick the forage species, soil type, amount of regrowth and sand density.</li>
-    <li style="margin-bottom:10px">Calculations are cleared when you close the app. To create and share a report of your calculation, use the "Email" button at the top bar.</li>
+<p align="center">This app calculates the plant-available nitrogen (N), phosphorus (P2O5), potassium (K20), and sulfur (S) nutrient credits (i.e. fertilizer value) of manure from various livestock species that is applied to cropland fields. The app also calculates the N credit available to crops that follow forage legumes in the rotation.</p>
+
+<h3 align="center">
+    Manure Nutrient Credits
+</h3>
+
+<p align="center">To use this app, first select the manure type (solid or liquid) and indicate if the manure has been analyzed by a laboratory for its nutrient content. If yes, enter the available N, P2O5, K20, and
+    S from the lab report. Next, enter the manure application rate. The nutrient credits from this manure application are displayed at the bottom of the screen. These credits should be subtracted from the base (unadjusted) fertilizer recommendations.
+</p>
+
+<p align="center">
+    If the manure has not been analyzed for nutrient content, typical nutrient contents (book values) based on lab analysis averages will be used. Select a category for the time from application
+    to incorporation of the manure. Next, identify the appropriate manure source. Then enter
+    the manure application rate. The credits from this manure application are displayed at the bottom of the screen. These credits should be subtracted from the base (unadjusted) fertilizer recommendations.
+
+</p>
+
+<p> ** Node:  Manure nutrient content can vary greatly, manure analysis is encouraged.
+</p>
+
+<h3 align="center">Legume Nitrogen Credits</h3>
+<p align="center">
+    To calculate forage legume-N credits, first select the forage legume crop. Legume choices are alfalfa or red clover/birdsfoot trefoil. Next, enter the soil texture of the field. The density of the legume stand at the time of termination also needs to be entered. A good stand of alfalfa is 70% or more alfalfa (> 4 plants/ft2); a fair stand is 30-70% alfalfa (1.5-4 plants/ft2); a poor stand is less than 30% alfalfa (< 1.5 plants/ft2). Lastly, select the amount of plant regrowth (> 8 inches or < 8 inches) present at the time the legume crop is killed. The legume-N nutrient credit available to the crop that follows in the rotation is displayed at the bottom of the screen. This amount should be subtracted from the base (unadjusted) N fertilizer recommendation.
+</p>
+
+<p> ** Node:</p>
+
+<ol>
+    <li>Method of killing the forage stand (tillage, herbicide, winter kill) does not affect the N credit.</li>
+    <li>A second year N credit of 50 lbs N/acre is released following a good or fair legume stand on medium- and fine-textured soils. There is no second year credit on sands.</li>
+
+</ol>
 
 
-</ul>
 
 <p align="center"><img src="NPK_icon.png"/></p>
 
@@ -36,7 +63,7 @@
 </p>
 
 
-
+<p align="center">For more information on manure and legume nutrient credits, see UW-Extension publication A2809 Nutrient Application Guidelines for Field, Vegetable and Fruit Crops in Wisconsin.</p>
 <p align="center"><a href="http://ipcm.wisc.edu">http://ipcm.wisc.edu</a></p>
 
 <p align="center">Copyright &copy; 2014 Board of Regents of the University of Wisconsin System</p>
