icon change and bug fix a data link

--- a/app/src/main/assets/legume_help.html
+++ b/app/src/main/assets/legume_help.html
@@ -61,7 +61,9 @@
 <p align="center">
     Mo Lu, NPM Computer Programmer
 </p>
-
+<p align="center">
+    John Schmidt, NPM Computer Programmer
+</p>
 
 <p align="center">For more information on manure and legume nutrient credits, see UW-Extension publication A2809 Nutrient Application Guidelines for Field, Vegetable and Fruit Crops in Wisconsin.</p>
 <p align="center"><a href="http://ipcm.wisc.edu">http://ipcm.wisc.edu</a></p>
